--- a/test4/_site.yml
+++ b/test4/_site.yml
@@ -1,8 +1,8 @@
-name: "サイトタイトル"
-navbar: 
-  title: "My ウェブサイト"
+name: "my-website"
+navbar:
+  title: "My Website"
   left:
-    - text: "ホーム"
+    - text: "Home"
       href: index.html
-    - text: "趣味"
-      href: shumi.html
+    - text: "About"
+      href: about.html
